[package]
name = "nrf-modem-nal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrfxlib = { git = "https://github.com/folkertdev/nrfxlib", rev = "a5672efcaeaf8f4485d755e086cb36c00f79ca78" }
embedded-nal = "0.6.0"
heapless = "0.7.10"
at-commands = "0.5.1"
