[package]
name = "nrf-modem-nal"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tweedegolf/nrf-modem-nal"
repository = "https://github.com/tweedegolf/nrf-modem-nal"
keywords = ["no_std", "nal", "nrf9160", "modem"]
categories = ["embedded", "no-std"]
description = "An embedded-nal implementation for the nrf9160 modem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrfxlib = "0.6.0"
nrfxlib-sys = "1.5.1"
embedded-nal = "0.6.0"
heapless = "0.7.10"
at-commands = "0.5.1"
ex-log = { package = "log", version = "0.4", optional = true }

[features]
log = ["dep:ex-log"]
